hard-gists/6202539/run.log
=== Docker Run Log for 6202539 ===
Started at: Mi 29. Okt 16:27:02 CET 2025

[2025-10-29 16:27:02] START: Running container for 6202539
[2025-10-29 16:27:03] SUCCESS: Container 255b18f131cbcddbe2125603118a07faecb1beb10e0e25c9c11b2a49b2c87646 started for 6202539
=== Container logs for 6202539 ===
  File "/snippet.py", line 15
    print "move ", 100 + 20 * i, 500                                                
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6202539 ===
[2025-10-29 16:27:05] INFO: Container 255b18f131cbcddbe2125603118a07faecb1beb10e0e25c9c11b2a49b2c87646 has stopped
